--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -31,6 +31,7 @@
     justify-content: space-between;
     padding: 16px 25px;
     border-top: 1px solid #e9e9e9;
+	position: relative;
 }
 
 .stc-grid-item-title {
@@ -44,6 +45,12 @@
 
 .stc-grid-item {
 	cursor: pointer;
+
+	&:hover {
+		.stc-grid-item-hover-button {
+			animation: visible 0.2s linear forwards;
+		}
+	}
 }
 
 .stc-grid-item-screenshot {
@@ -107,5 +114,35 @@
 		path {
 			fill: var( --stc-color-favorite );
 		}
+	}
+}
+
+.stc-grid-item-hover-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	left: 0;
+	background: var(--stc-background-primary);
+	width: 100%;
+	height: auto;
+	visibility: hidden;
+	opacity: 0;
+	> button {
+		padding: 7px 25px;
+		background: var(--stc-color-accent);
+		&:hover {
+			background: var(--stc-color-accent-hover);
+		}
+	}
+}
+
+@keyframes visible {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+		visibility: visible;
 	}
 }
