--- a/src/no-result-found/style.scss
+++ b/src/no-result-found/style.scss
@@ -1,5 +1,5 @@
 .stc-sites-no-results {
-    border-bottom: 1px solid #D1D5DB;
+    border-bottom: 1px solid var(--stc-border-color);
     box-sizing: border-box;
     padding: 30px 30px 30px 0;
     text-align: left;
