--- a/src/site-business-type/style.scss
+++ b/src/site-business-type/style.scss
@@ -1,4 +1,4 @@
-.st-mega-menu-filter {
+.stc-mega-menu-filter {
 	--stc-mega-menu-item-title-margin: 0px 20px -20px 0px;
     --stc-mega-menu-item-title-padding: 0px 0px 15px 0px;
     --stc-mega-menu-group-margin: 18px 0px 0px 0px;
