--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -220,7 +220,7 @@
 	justify-content: center;
 	align-items: center;
 	span {
-		& > img {
+		& > svg {
 			width: 32px;
 			height: auto;
 			margin: 5px;
