--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -225,7 +225,7 @@
 		}
 	}
 }
-.tc-grid-item-screenshot-wrap {
+.stc-grid-item-screenshot-wrap {
     position: relative;
 }
 .stc-grid-item-blur {
@@ -234,7 +234,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 21%;
+    bottom: 0;
     left: 0;
 	opacity: 0;
 }
