--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -106,6 +106,7 @@
     border-radius: var(--stc-border-radius-2);
     font-weight: var(--stc-font-weight-extra-bold);
     letter-spacing: 0.3px;
+    z-index: 4;
 }
 
 .stc-grid-favorite {
