--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -236,9 +236,6 @@
     background: rgba(255, 255, 255, 0.8);
     z-index: 2;
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-	opacity: 0;
+    inset: 0;
+    opacity: 0;
 }
