Convert the background image to img tag

--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -32,7 +32,12 @@
     justify-content: space-between;
     padding: 16px 25px;
     border-top: 1px solid #e9e9e9;
-	position: relative;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--stc-color-white);
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 .stc-grid-item-title {
@@ -46,6 +51,7 @@
 
 .stc-grid-item {
 	cursor: pointer;
+	height: 26vw;
 
 	&:hover {
 		.stc-grid-item-hover-button-wrap {
@@ -73,15 +79,23 @@
 	}
 }
 
+.stc-grid-site-screenshot {
+	max-width: 100%;
+    background-color: var(--stc-background-secondary);
+    border-top-left-radius: var(--stc-border-radius-2);
+    border-top-right-radius: var(--stc-border-radius-2);
+}
+
 .stc-grid-item-inner {
 	margin: 0;
-	position: relative;
-	transition: all 0.15s;
-	box-sizing: border-box;
-	background: var( --stc-color-white );
-	border-radius: var( --stc-border-radius-5 );
-	border: 1px solid var( --stc-color-light-gray );
-	transition: opacity .25s ease-in-out;
+    position: relative;
+    box-sizing: border-box;
+    background: var(--stc-color-white);
+    border-radius: var(--stc-border-radius-5);
+    border: 1px solid var(--stc-color-light-gray);
+    transition: opacity .25s ease-in-out;
+    max-height: 100%;
+    overflow: hidden;
 	&:hover {
 		box-shadow: 0px 15px 20px -10px rgba(0, 0, 0, 0.25);		
 		.stc-grid-item-hover-button-wrapper {
