--- a/src/tooltip/style.scss
+++ b/src/tooltip/style.scss
@@ -25,6 +25,7 @@
     border-radius: 2px;
     background: var(--stc-color-heading);
     font-size: 13px;
-    top: 135%;
+    top: 55%;
+    right: 100%;
     padding: 6px 12px;
 }
