--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -154,14 +154,15 @@
 }
 
 .stc-grid-item-hover-button {
-	padding: 7px 25px;
+	padding: 7px 42px;
 	background: var(--stc-color-accent);
-	font-size: 18px;
-	font-weight: 600;
+	font-size: var(--stc-font-size-s);
+	font-weight: var(--stc-font-weight-extra-bold);
 	color: var(--stc-color-white);
 	line-height: 24px;
 	text-decoration: none !important;
-	border-radius: var(--stc-border-radius-2);
+	border-radius: var(--stc-border-radius-4);
+	box-shadow: 0px 10px 10px -5px rgba(86, 74, 151, 0.5) !important;
 	&:hover {
 		background: var(--stc-color-accent-hover);
 		color: var(--stc-color-white);
