fix: pagination button styling

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@ body {
 	/* Colors */
     --stc-color-accent: #2563EB;
     --stc-color-accent-hover: #1D4ED8;
+    --stc-color-accent-2: #492CDD;
     --stc-color-heading: #1F2937;
     --stc-color-body: #4B5563;
     --stc-color-light-gray: #E5E7EB;
@@ -36,6 +37,7 @@ body {
 
     /** Border */
     --stc-border-color: #D1D5DB;
+    --stc-border-color-2: #C4C7CC;
     --stc-border-radius-5: 5px;
     --stc-border-radius-4: 4px;
     --stc-border-radius-3: 3px;
