Post status ribbon added for draft status

--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -126,6 +126,21 @@
     z-index: 4;
 }
 
+.stc-grid-item-status {
+    background: #cf0e04;
+    color: #000;
+    padding: 4px 12px;
+    font-size: var( --stc-font-size-xxs );
+    top: -4px;
+    left: -4px;
+    text-transform: uppercase;
+    position: absolute;
+    z-index: 1;
+    border-radius: var(--stc-border-radius-2);
+    font-weight: var(--stc-font-weight-extra-bold);
+    letter-spacing: 0.3px;
+}
+
 .stc-grid-favorite {
 	svg {
 		width: 16px;
