--- a/src/search/style.scss
+++ b/src/search/style.scss
@@ -22,11 +22,11 @@
 			border: var( --stc-search-input--focus-border, none );
 		}
 
-		&:hover,
-		&:active,
-		&:focus {
-			box-shadow: 0px 2px 6px -1px rgb(0 0 0 / 6%), 0px 4px 8px -1px rgb(0 0 0 / 10%);
-		}
+		// &:hover,
+		// &:active,
+		// &:focus {
+		// 	box-shadow: 0px 2px 6px -1px rgb(0 0 0 / 6%), 0px 4px 8px -1px rgb(0 0 0 / 10%);
+		// }
 
 		&::-webkit-input-placeholder {
 			color: var( --stc-color-placeholder );
