added a global css var

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,12 +6,13 @@ body {
     --stc-color-heading: #1F2937;
     --stc-color-body: #4B5563;
     --stc-color-light-gray: #E5E7EB;
-    --stc-color-placeholder: #6B7280;
+    --stc-color-placeholder: #BDBDC7;
     --stc-color-white: #FFFFFF;
     --stc-color-favorite: #E91E63;
     --stc-background-secondary: #F7F7F9;
     --stc-background-primary: #FFFFFF;
     --stc-background-light: #F9FAFB;
+    --stc-icon-color: #C6C6D1;
 
     /* Font sizes */
     --stc-font-size-xxl: 30px;
