--- a/src/search/style.scss
+++ b/src/search/style.scss
@@ -7,26 +7,25 @@
 
 	.stc-search-input {
 		width: 740px;
-		padding: 16px 22px 16px 44px;
+		padding: 5px 15px;
 		opacity: 1;
 		font-size: var(--stc-font-size-s);
 		border: var( --stc-search-input-border, none );
-		font-weight: var(--stc-font-weight-normal);
-		border-radius: var(--stc-border-radius-4, 4px);
-		background: var(--stc-background-primary);
-		box-shadow: var( --stc-search-input-box-shadow, 0px 0px 4px -1px rgb(0 0 0 / 6%), 0px 2px 6px -1px rgb(0 0 0 / 10%) );
-		height: var( --stc-search-input-height, 62px );
+		background: var(--stc-background-primary, #FFF);
+		box-shadow: 0px 10px 65px -10px rgba(0, 0, 0, 0.12);
+		height: var( --stc-search-input-height, 50px );
 
 		&:focus {
 			outline: none;
 			border: var( --stc-search-input--focus-border, none );
 		}
 
-		// &:hover,
-		// &:active,
-		// &:focus {
-		// 	box-shadow: 0px 2px 6px -1px rgb(0 0 0 / 6%), 0px 4px 8px -1px rgb(0 0 0 / 10%);
-		// }
+		&:hover,
+		&:active,
+		&:focus {
+			box-shadow: 0px 10px 65px -10px rgba(0, 0, 0, 0.12);
+
+		}
 
 		&::-webkit-input-placeholder {
 			color: var( --stc-color-placeholder );
