--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -88,26 +88,32 @@
 
 .stc-grid-item-inner {
 	margin: 0;
-    position: relative;
-    box-sizing: border-box;
-    background: var(--stc-color-white);
-    border-radius: var(--stc-border-radius-5);
-    border: 1px solid var(--stc-color-light-gray);
-    transition: opacity .25s ease-in-out;
     max-height: 100%;
     overflow: hidden;
+	position: relative;
+	transition: all 0.15s;
+	box-sizing: border-box;
+	background: var( --stc-color-white );
+	border-radius: var( --stc-border-radius-5 );
+	border: 1px solid var( --stc-color-light-gray );
 	&:hover {
-		box-shadow: 0px 15px 20px -10px rgba(0, 0, 0, 0.25);		
-		.stc-grid-item-hover-button-wrapper {
-			animation: stc-visible 0.2s linear forwards;
-		}
-		.stc-grid-item-blur{
-			opacity: 1;
-		}
-		.stc-grid-site-screenshot {
-			filter: blur(2px);
-		}
+		box-shadow: 0 6px 14px rgb(0 0 0 / 12%);
 	}
+}
+
+.stc-grid-item-badge {
+	background: #FFC107;
+	color: #000;
+	padding: 4px 12px;
+	font-size: var( --stc-font-size-xxs );
+	top: 0px;
+	right: 0px;
+	text-transform: uppercase;
+    position: absolute;
+    z-index: 1;
+    border-radius: var(--stc-border-radius-2);
+    font-weight: var(--stc-font-weight-extra-bold);
+    letter-spacing: 0.3px;
 }
 
 .stc-grid-favorite {
